tests/invalid/syntax/where_without_generics.fig
// Invalid: Where clause without generic parameters
func no_generics_with_where(x: i32) -> i32
    where i32: Clone
    return x
